crates/drift-gfx/tests/snapshots/replay__greeter_avc420.snap
---
source: crates/drift-gfx/tests/replay.rs
expression: summarize(&calls)
---
- Call:
    Reset:
      output:
        width: 1280
        height: 800
- Call:
    CreateSurface:
      id: 0
      size:
        width: 1280
        height: 800
- Call:
    MapSurfaceToOutput:
      id: 0
      origin:
        x: 0
        y: 0
- Call:
    BlitNv12:
      id: 0
      size:
        width: 1280
        height: 800
      regions:
        - x: 0
          y: 0
          width: 1280
          height: 800
- Call:
    EndFrame:
      frame_id: 0
- Call:
    BlitNv12:
      id: 0
      size:
        width: 1280
        height: 800
      regions:
        - x: 0
          y: 0
          width: 448
          height: 64
        - x: 640
          y: 0
          width: 64
          height: 64
        - x: 768
          y: 0
          width: 192
          height: 64
        - x: 1024
          y: 0
          width: 192
          height: 64
        - x: 0
          y: 64
          width: 192
          height: 64
        - x: 256
          y: 64
          width: 384
          height: 64
        - x: 832
          y: 64
          width: 448
          height: 64
        - x: 0
          y: 128
          width: 448
          height: 64
        - x: 512
          y: 128
          width: 64
          height: 64
        - x: 640
          y: 128
          width: 192
          height: 64
        - x: 896
          y: 128
          width: 384
          height: 64
        - x: 0
          y: 192
          width: 64
          height: 64
        - x: 128
          y: 192
          width: 448
          height: 64
        - x: 640
          y: 192
          width: 640
          height: 64
        - x: 0
          y: 256
          width: 320
          height: 64
        - x: 384
          y: 256
          width: 896
          height: 64
        - x: 0
          y: 320
          width: 384
          height: 64
        - x: 448
          y: 320
          width: 576
          height: 64
        - x: 1088
          y: 320
          width: 192
          height: 64
        - x: 0
          y: 384
          width: 384
          height: 64
        - x: 448
          y: 384
          width: 320
          height: 64
        - x: 832
          y: 384
          width: 448
          height: 64
        - x: 0
          y: 448
          width: 64
          height: 64
        - x: 128
          y: 448
          width: 448
          height: 64
        - x: 768
          y: 448
          width: 512
          height: 64
        - x: 0
          y: 512
          width: 640
          height: 64
        - x: 704
          y: 512
          width: 64
          height: 64
        - x: 832
          y: 512
          width: 448
          height: 64
        - x: 0
          y: 576
          width: 320
          height: 64
        - x: 448
          y: 576
          width: 192
          height: 64
        - x: 704
          y: 576
          width: 128
          height: 64
        - x: 896
          y: 576
          width: 384
          height: 64
        - x: 64
          y: 640
          width: 768
          height: 64
        - x: 896
          y: 640
          width: 128
          height: 64
        - x: 1088
          y: 640
          width: 192
          height: 64
        - x: 0
          y: 704
          width: 256
          height: 64
        - x: 768
          y: 704
          width: 64
          height: 64
        - x: 896
          y: 704
          width: 64
          height: 64
        - x: 1088
          y: 704
          width: 192
          height: 64
        - x: 0
          y: 768
          width: 64
          height: 32
        - x: 128
          y: 768
          width: 64
          height: 32
        - x: 384
          y: 768
          width: 64
          height: 32
        - x: 832
          y: 768
          width: 192
          height: 32
        - x: 1152
          y: 768
          width: 64
          height: 32
- Call:
    EndFrame:
      frame_id: 1
- Call:
    BlitNv12:
      id: 0
      size:
        width: 1280
        height: 800
      regions:
        - x: 1088
          y: 0
          width: 64
          height: 64
        - x: 576
          y: 192
          width: 128
          height: 192
        - x: 512
          y: 384
          width: 256
          height: 64
        - x: 448
          y: 448
          width: 320
          height: 64
- Call:
    EndFrame:
      frame_id: 2
- Call:
    BlitNv12:
      id: 0
      size:
        width: 1280
        height: 800
      regions:
        - x: 512
          y: 448
          width: 320
          height: 64
- Call:
    EndFrame:
      frame_id: 3
- Call:
    BlitNv12:
      id: 0
      size:
        width: 1280
        height: 800
      regions:
        - x: 1088
          y: 0
          width: 64
          height: 64
        - x: 704
          y: 448
          width: 128
          height: 64
- Call:
    EndFrame:
      frame_id: 4
- Call:
    BlitNv12:
      id: 0
      size:
        width: 1280
        height: 800
      regions:
        - x: 768
          y: 448
          width: 64
          height: 64
- Call:
    EndFrame:
      frame_id: 5
- Call:
    BlitNv12:
      id: 0
      size:
        width: 1280
        height: 800
      regions:
        - x: 768
          y: 448
          width: 64
          height: 64
- Call:
    EndFrame:
      frame_id: 6
- Call:
    BlitNv12:
      id: 0
      size:
        width: 1280
        height: 800
      regions:
        - x: 768
          y: 448
          width: 64
          height: 64
- Call:
    EndFrame:
      frame_id: 7
