crates/drift-gfx/tests/snapshots/replay__headless_scale200_avc420.snap
---
source: crates/drift-gfx/tests/replay.rs
expression: summarize(&calls)
---
- Call:
    Reset:
      output:
        width: 2560
        height: 1600
- Call:
    CreateSurface:
      id: 0
      size:
        width: 2560
        height: 1600
- Call:
    MapSurfaceToOutput:
      id: 0
      origin:
        x: 0
        y: 0
- Call:
    BlitNv12:
      id: 0
      size:
        width: 2560
        height: 1600
      regions:
        - x: 0
          y: 0
          width: 2560
          height: 1600
- Call:
    EndFrame:
      frame_id: 0
- Call:
    BlitNv12:
      id: 0
      size:
        width: 2560
        height: 1600
      regions:
        - x: 0
          y: 0
          width: 64
          height: 1472
        - x: 1472
          y: 0
          width: 64
          height: 1472
        - x: 0
          y: 1472
          width: 2560
          height: 128
- Call:
    EndFrame:
      frame_id: 1
- Call:
    BlitNv12:
      id: 0
      size:
        width: 2560
        height: 1600
      regions:
        - x: 0
          y: 0
          width: 1536
          height: 64
        - x: 0
          y: 64
          width: 64
          height: 64
        - x: 832
          y: 64
          width: 64
          height: 64
        - x: 1216
          y: 64
          width: 320
          height: 64
        - x: 0
          y: 128
          width: 64
          height: 128
        - x: 1472
          y: 128
          width: 64
          height: 128
        - x: 0
          y: 256
          width: 64
          height: 64
        - x: 576
          y: 256
          width: 320
          height: 64
        - x: 1472
          y: 256
          width: 64
          height: 64
        - x: 0
          y: 320
          width: 64
          height: 256
        - x: 512
          y: 320
          width: 448
          height: 256
        - x: 1472
          y: 320
          width: 64
          height: 256
        - x: 0
          y: 576
          width: 64
          height: 64
        - x: 576
          y: 576
          width: 320
          height: 64
        - x: 1472
          y: 576
          width: 64
          height: 64
        - x: 0
          y: 640
          width: 64
          height: 64
        - x: 704
          y: 640
          width: 64
          height: 64
        - x: 1472
          y: 640
          width: 64
          height: 64
        - x: 0
          y: 704
          width: 64
          height: 192
        - x: 1472
          y: 704
          width: 64
          height: 192
        - x: 0
          y: 896
          width: 64
          height: 64
        - x: 512
          y: 896
          width: 448
          height: 64
        - x: 1472
          y: 896
          width: 64
          height: 64
        - x: 0
          y: 960
          width: 64
          height: 128
        - x: 320
          y: 960
          width: 832
          height: 128
        - x: 1472
          y: 960
          width: 64
          height: 128
        - x: 0
          y: 1088
          width: 64
          height: 64
        - x: 448
          y: 1088
          width: 64
          height: 64
        - x: 576
          y: 1088
          width: 128
          height: 64
        - x: 896
          y: 1088
          width: 64
          height: 64
        - x: 1472
          y: 1088
          width: 64
          height: 64
        - x: 0
          y: 1152
          width: 64
          height: 128
        - x: 512
          y: 1152
          width: 448
          height: 128
        - x: 1472
          y: 1152
          width: 64
          height: 128
        - x: 0
          y: 1280
          width: 64
          height: 64
        - x: 640
          y: 1280
          width: 192
          height: 64
        - x: 1472
          y: 1280
          width: 64
          height: 64
        - x: 0
          y: 1344
          width: 64
          height: 64
        - x: 1280
          y: 1344
          width: 128
          height: 64
        - x: 1472
          y: 1344
          width: 64
          height: 64
        - x: 0
          y: 1408
          width: 64
          height: 64
        - x: 576
          y: 1408
          width: 320
          height: 64
        - x: 1472
          y: 1408
          width: 64
          height: 64
        - x: 0
          y: 1472
          width: 1536
          height: 64
- Call:
    EndFrame:
      frame_id: 2
- Call:
    BlitNv12:
      id: 0
      size:
        width: 2560
        height: 1600
      regions:
        - x: 576
          y: 256
          width: 320
          height: 64
        - x: 512
          y: 320
          width: 448
          height: 256
        - x: 576
          y: 576
          width: 320
          height: 64
        - x: 704
          y: 640
          width: 128
          height: 64
- Call:
    EndFrame:
      frame_id: 3
- Call:
    BlitNv12:
      id: 0
      size:
        width: 2560
        height: 1600
      regions:
        - x: 576
          y: 256
          width: 320
          height: 64
        - x: 512
          y: 320
          width: 448
          height: 256
        - x: 576
          y: 576
          width: 320
          height: 64
        - x: 704
          y: 640
          width: 128
          height: 64
- Call:
    EndFrame:
      frame_id: 4
- Call:
    BlitNv12:
      id: 0
      size:
        width: 2560
        height: 1600
      regions:
        - x: 576
          y: 256
          width: 320
          height: 64
        - x: 512
          y: 320
          width: 448
          height: 256
        - x: 576
          y: 576
          width: 320
          height: 64
        - x: 704
          y: 640
          width: 128
          height: 64
- Call:
    EndFrame:
      frame_id: 5
- Call:
    BlitNv12:
      id: 0
      size:
        width: 2560
        height: 1600
      regions:
        - x: 576
          y: 256
          width: 320
          height: 64
        - x: 512
          y: 320
          width: 448
          height: 256
        - x: 576
          y: 576
          width: 320
          height: 64
        - x: 704
          y: 640
          width: 128
          height: 64
- Call:
    EndFrame:
      frame_id: 6
